# wasmium-pdk-rs

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
example-plugin/: Cargo.toml  build.rs
example-plugin/src/: lib.rs
src/: lib.rs  wasmium.rs
wasmium-macro/: Cargo.toml
wasmium-macro/src/: lib.rs
