[package]
name = "wasmium-pdk-rs"
version = "0.1.2"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
rmp-serde = "1.3"
serde = { version = "1.0", features = ["derive"] }
wasmium-macro = { path = "./wasmium-macro" }
paste = "1.0"

[dev-dependencies]
wasmium_runtime = { package = "wasmium", git = "https://github.com/vexvictrix/wasmium", tag = "v0.1.1" }
example-plugin = { path = "./example-plugin" }

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3"